# sem-gcp-agents

./: .cleanup-summary.md  .env.example  .gitignore  CLAUDE.md  Dockerfile  GA4_EVENTS_UPDATED.md  GCP_SECRETS_CHECKLIST.md  Makefile  PORTKEY_VERIFICATION.md  PROJECT_CONTEXT.md  README.md  SECRETS_MIGRATION_COMPLETE.md  SECRET_MANAGER_GUIDE.md  SECURITY_GUIDE.md  SETUP_STATUS.md  cloudbuild.yaml  docker-compose.yml  pyproject.toml  pytest.ini
.claude/: settings.local.json
.github/workflows/: ci.yml  deploy.yml
docs/: DEPLOYMENT_COMPLETE.md  GA4_SETUP_GUIDE.md  README.md  RECENT_FIXES_ANALYSIS.md  SLACK_SETUP_GUIDE.md  TESTING_RESULTS.md
docs/architecture/: BIGQUERY_ARCHITECTURE.md  CAMPAIGN_TAXONOMY_SYSTEM.md  SYSTEM_OVERVIEW.md
docs/development/: AGENT_EXCLUSIONS_CHANGES.md  ENHANCEMENTS_SUMMARY.md  IMPLEMENTATION_STATUS.md
docs/guides/: CLOUD_SHELL_QUICK_FIX.md  CLOUD_SHELL_SETUP.md  DEPLOYMENT_GUIDE.md  EXISTING_PROJECT_SETUP.md  GETTING_STARTED.md  GITHUB_CICD_SETUP.md  QUICK_START.md
docs/integrations/: PORTKEY_INTEGRATION.md  SETUP_PORTKEY.md
docs/knowledge/: INDEX.md  account_structure.md  marketing_directives.md  product_info.md  strategy_brand.md  strategy_competitor.md  strategy_nonbrand.md
docs/reference/: GEMINI_SQL_PROMPTS.md  (+1 more)
scripts/: check-recommendations-table.py  deploy-fix.sh  deploy.sh  deploy_cloud_run.sh  query-recommendations.py  review-recommendations.sql  run_local.sh  seed_bigquery.py  seed_taxonomy.py  setup-cloud-scheduler.sh  setup_secrets_individual.sh  slack_manifest.yml  test-deployed-system.sh  test-recent-fixes.py  test-slack-integration.sh  test_secret_manager.py  update_cloud_run_config.sh  view-recommendations.py
sql/: populate_conversion_goals.sql
src/: config.py  main.py  secrets.py
terraform/: TROUBLESHOOTING.md  backend.tf  main.tf  outputs.tf  terraform.tfvars.example  variables.tf
tests/: __init__.py
(+65 files in other folders)
